=head1 NAME

Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.11

XXX slowops needs docs and more ops
XXX subroutine profiler docs need update
XXX doc findcaller option
XXX note here and doc goto behaviour
XXX set prereq version of Test::More

  Note: The file format has changed. Old files can't be read.

  Fixed (rare) overflow bug for 32bit perls.
  Fixed discarding of (rare) negative intervals.
  Fixed risk of infinite recursion if trace enabled and
    $SIG{__WARN__} was set to a code reference.
  Fixed subroutine recursion depth measurement.

  Changed ReadStream SUB_LINE_RANGE tag to SUB_INFO.

  Added log=F option to write trace log to a file.

  Added slowops=N option which enables profiling of potentially slow
    perl opcodes (e.g., system calls and regexs). They're treated like xsubs.
    slowops=1 puts timings into one package ("CORE::", eg CORE::sleep)
    slowops=2 puts timings into into the package that made the
    call, e.g., "Foo::CORE:sleep" (note the single colon).

Changes to subroutine profiler:

  Rewritten. Captures more data more accurately and robustly.

  Added recording the name of the calling subroutine to enable proper
    linking of call trees. Previously only the calling file and line
    were recorded. (This is more significant than it sounds :)

  Added docs describing how the subroutine profiler works.

Changes to nytprofhtml:

  Added interactive treemap view of package and subroutine times.
    Left-click to zoom in (drill-down) one level, right-click to zoom out.

  Added columns to the main source code reports to show
    a count of sub calls and time spent in those calls.

  Assorted cosmetic improvements.
  Changed colors on report pages to be less saturated.


=head2 Changes in Devel::NYTProf 2.10 (svn r774) 18th June 2009

  Fixed call count for XSubs that was one too high.
  Fixed enable_profile() after fork thanks to delamonpansie